# ollpaca

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ollpaca/: __init__.py
